fixed table spacing

--- a/nuncio/style-nuncio.css
+++ b/nuncio/style-nuncio.css
@@ -48,6 +48,7 @@ th{
   font-size: 14px;
   line-height: 150%;
   color: #262424;
+  height: 42px;
 }
 
 tr{
@@ -60,7 +61,7 @@ tr{
 }
 
 td{
-  height: 38px;
+  height: 42px;
 }
 
 .opened-row{
@@ -72,6 +73,10 @@ td{
   color: #262424;
 }
 
+.opened-row td{
+  height: 20px;
+}
+
 .content-row{
   font-family: IBM Plex Sans;
   font-style: normal;
@@ -80,6 +85,10 @@ td{
   line-height: 100%;
   color: #797979;
   text-indent: 2em;
+}
+
+.content-row td{
+  height: 20px;
 }
 
 .course-assessment-name{
